--- a/WebContent/baby_life.html
+++ b/WebContent/baby_life.html
@@ -10,6 +10,7 @@
     <link href="http://fonts.googleapis.com/earlyaccess/nanumgothiccoding.css" rel="stylesheet">
     <script src="script/jquery-3.5.1.min.js"></script>
     <script src="script/script_sh.js"></script>
+    <script src="script/script.js"></script>
     <title>baby_life</title>
 </head>
 <body>
@@ -60,7 +61,7 @@
         <div class="defe_bg">
             <div class="defe_con">
                 <h2>배변</h2>
-                <form action="">
+                <forms>
                     <label>많다</label>
                     <input type="radio" name="volume" value="많다">
                     <label>적당하다</label>
@@ -68,30 +69,32 @@
                     <label>적다</label>
                     <input type="radio" name="volume" value="적다">
                     <input type="submit" value="입력" class="btn btn_color_linear">
-                </form>
+                </forms>
             </div>
         </div>
 
         <div class="meal_bg">
             <div class="meal_con">
                 <h2>수유</h2>
-                <form action="">
+                <forms>
                     <label>수유</label>
                     <input type="number" name="mL" value="">
                     <label>mL</label>
                     <input type="submit" value="입력" class="btn btn_color_linear">
-                </form>
+                </forms>
             </div>
         </div>
 
         <div class="sleep_bg">
             <div class="sleep_con">
                 <h2>수면시간 설정</h2>
-                <form action="">
-                    <label>시간</label>
+                <forms>
+                    <label>시작시간</label>
+                    <input type="time" name="time" value=""><br>
+                    <label>끝시간</label>
                     <input type="time" name="time" value="">
                     <input type="submit" value="입력" class="btn btn_color_linear">
-                </form>
+                </forms>
             </div>
         </div>
 
