--- a/WebContent/baby_life.html
+++ b/WebContent/baby_life.html
@@ -19,7 +19,7 @@
        <!-- nav -->
        <div id="main_header">
         <div class="left_icon">
-            <div class="menu"><img src="img/left_icon.png" width="50px"></div>
+            <div class="menu"><img src="img/left_icon1.png" width="50px"></div>
             <a href="index.html" class="logo"><img src="img/sub_title2.png" width="100px"></a>
         </div>
         <div class="right_icon"><a href="my_page.html"></a></div>
