--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- font -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <script src="script/jquery-3.5.1.min.js"></script>
+    <script src="../script/jquery-3.5.1.min.js"></script>
     <script src="script/script_sh.js"></script>
     <title>mamiddo</title>
 </head>
@@ -39,17 +39,17 @@
             </div>
             <div class="page">
                 <ul class="life_list index_alam">
-                    <li class="defecate" id="alarm_red">
+                    <li class="defecate">
                         <a class="alam_left_p" id="index_red">위험</a>
                         <spna>2020.10.17</spna>
                         <spna class='meal_color'id="index_red2">위험 합니다.</spna>
                     </li>
-                    <li class="defecate" id="alarm_yellow">
+                    <li class="defecate">
                         <a class="alam_left_y">주의</a>
                         <spna>2020.10.17</spna>
                         <spna class='sleep_color'>주의가 필요 합니다.</spna>
                     </li>
-                    <li class="defecate" id="alarm_safe">
+                    <li class="defecate">
                         <a class="alam_left_y" id="index_green">안전</a>
                         <spna>2020.10.17</spna>
                         <spna class='meal_color' id="index_green2">안전 합니다.</spna>
@@ -94,6 +94,9 @@
                     <input type="submit" value="전송" class="btn my_btn btn_color">
                 </form>
             </div>
+        </div>
+        <div id="alam_pop">
+            <h2>위험 경고!</h2>
         </div>
     </div>
 </body>
