--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -43,16 +43,19 @@
                         <a class="alam_left_p" id="index_red">위험</a>
                         <spna>2020.10.17</spna>
                         <spna class='meal_color'id="index_red2">위험 합니다.</spna>
+                        <img src="img/alam_cion4.png">
                     </li>
                     <li class="defecate">
                         <a class="alam_left_y">주의</a>
                         <spna>2020.10.17</spna>
                         <spna class='sleep_color'>주의가 필요 합니다.</spna>
+                        <img src="img/alam_cion3.png">
                     </li>
                     <li class="defecate">
                         <a class="alam_left_y" id="index_green">안전</a>
                         <spna>2020.10.17</spna>
                         <spna class='meal_color' id="index_green2">안전 합니다.</spna>
+                        <img src="img/alam_cion2.png">
                     </li>  
                 </ul>
                 <br>
@@ -96,6 +99,7 @@
             </div>
         </div>
         <div id="alam_pop">
+            <img src="img/alam_cion1.png">
             <h2>위험 경고!</h2>
         </div>
     </div>
