--- a/WebContent/commu.html
+++ b/WebContent/commu.html
@@ -45,32 +45,29 @@
                         <option value="작성자">작성자</option>
                     </select>
                     <input type="search">
-                    <input type="submit">
+                    <input type="submit" value="검색">
                 </form>
             </div>
-            <table class="commu_table" id='content'>
-                <thead>
-                    <tr>
-                        <th>제목</th>
-                        <th>작성자</th>
-                        <th>날짜</th>
-                    </tr>
-                </thead>
+            <table class="commu_table">
                 <tbody>
                     <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>
+                            <a href="#">[제목] 마미또 이용 후기</a>  <!--제목을 클릭하면 내용이 보여져야함 -->
+                            <spna>
+                                <a class="sub_title">2020.10.17</a>
+                                <a class="sub_title sc_sub">호랑이 맘</a>
+                            </spna>  
+                        </td>     
                     </tr>
+                    <!-- 여기까지 한줄 -->
                     <tr>
-                        <td><a href="#">제목적는 부분</a></td>  <!--제목을 클릭하면 내용이 보여져야함 -->
-                        <td>호랭이</td>
-                        <td>2020.10.17</td>
-                    </tr>
-                    <tr>
-                        <td><a href="#">제목적는 부분</a></td>
-                        <td>호랭이</td>
-                        <td>2020.10.17</td>
+                        <td>
+                            <a href="#">[제목] 마미또 이용 후기</a>  <!--제목을 클릭하면 내용이 보여져야함 -->
+                            <spna>
+                                <a class="sub_title">2020.10.17</a>
+                                <a class="sub_title sc_sub">호랑이 맘</a>
+                            </spna>  
+                        </td>     
                     </tr>
                    
                 </tbody>
